--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "keywords": ["express", "education", "API design", "express-sse", "lowdb"],
+  "keywords": [
+    "express",
+    "education",
+    "API design",
+    "express-sse",
+    "lowdb"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -15,5 +21,14 @@
     "express": "^4.17.1",
     "express-sse": "^0.5.3",
     "lowdb": "^1.0.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/juliabengtsson2/smart-home-api-JuliaBengtsson.git"
+  },
+  "bugs": {
+    "url": "https://github.com/juliabengtsson2/smart-home-api-JuliaBengtsson/issues"
+  },
+  "homepage": "https://github.com/juliabengtsson2/smart-home-api-JuliaBengtsson#readme"
 }
